[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 282.0
margin_top = 45.0
margin_right = 438.0
margin_bottom = 99.0

[node name="Button" type="Button" parent="."]
margin_left = 84.0
margin_top = 43.0
margin_right = 187.0
margin_bottom = 98.0

[node name="Button2" type="Button" parent="."]
margin_left = 86.0
margin_top = 157.0
margin_right = 189.0
margin_bottom = 212.0

[node name="Label" type="Label" parent="."]
margin_left = 288.0
margin_top = 13.0
margin_right = 431.0
margin_bottom = 44.0
text = "insira o numero para
ser adicionado a lista"

[node name="Label2" type="Label" parent="."]
margin_left = 82.0
margin_top = 227.0
margin_right = 225.0
margin_bottom = 258.0
text = "clique para ordenar"

[node name="Label3" type="Label" parent="."]
margin_left = 276.0
margin_top = 160.0
margin_right = 424.0
margin_bottom = 212.0
align = 1
valign = 1

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
